--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,5 @@
     <string name="tab_news">News</string>
     <string name="tab_competitions">Competitions</string>
     <string name="toolbar_tittle_scenarios">example</string>
+    <string name="sign_in_google_error">Authentication failed.</string>
 </resources>
